--- a/aboly.html
+++ b/aboly.html
@@ -4,7 +4,7 @@ permalink: /aboly
 ---
 
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-Hans">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -1357,7 +1357,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="erli"></a><span class="lyterm">立</span>：立身，自立，指学问上有所成就，能够创造价值、自食其力。据《左传&middot;昭公七年》，<a id="mengxizi"></a>孟僖子（？&mdash;前518年）临终前嘱咐儿子<a href="#mengyizi">孟懿子</a>向孔子学礼，孔子时年34岁，就已名声在外了。也有把&ldquo;立&rdquo;解释为 <a href="#7.6" class="lyref">7.6</a>  立志求道、<a href="#8.8" class="lyref">8.8</a> <span class="lyq">立于礼</span>等。<span class="lyseealso"><span>【参】</span><span>英国生物学家赫胥黎（Thomas Henry Huxley）1892年写给友人之子的一封信上说：<span class="lyqe">In my opinion a man's first duty is to find a way of supporting himself, thereby relieving other people of the necessity of supporting him.</span>（<span class="lyq">我认为做人的第一要务是想办法来自食其力，而不用依靠别人去撑持他。</span>）</span></span>
+<a id="erli"></a><span class="lyterm">立</span>：立身，自立，指学问上有所成就，能够创造价值、自食其力。据《左传&middot;昭公七年》，孟僖子临终前嘱咐儿子<a href="#mengyizi">孟懿子</a>向孔子学礼，孔子时年34岁，就已名声在外了。也有把&ldquo;立&rdquo;解释为 <a href="#7.6" class="lyref">7.6</a>  立志求道、<a href="#8.8" class="lyref">8.8</a> <span class="lyq">立于礼</span>等。<span class="lyseealso"><span>【参】</span><span>英国生物学家赫胥黎（Thomas Henry Huxley）1892年写给友人之子的一封信上说：<span class="lyqe">In my opinion a man's first duty is to find a way of supporting himself, thereby relieving other people of the necessity of supporting him.</span>（<span class="lyq">我认为做人的第一要务是想办法来自食其力，而不用依靠别人去撑持他。</span>）</span></span>
 </p>
 </li>
 <li>
@@ -1398,7 +1398,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="mengyizi"></a><span class="lyterm">孟懿（<span class="lypinyin">y&igrave;</span>）子</span>，<span class="lyterm">孟孙</span>：名何忌，鲁国<a href="#mengshi">孟孙氏</a>第9代宗主，<a href="#mengwubo">孟武伯</a>之父，谥号是懿（&ldquo;温柔圣善曰懿&rdquo;）。他曾遵父亲<a href="#mengxizi">孟僖子</a>的遗命向孔子学礼。</p>
+<a id="mengyizi"></a><span class="lyterm">孟懿（<span class="lypinyin">y&igrave;</span>）子</span>，<span class="lyterm">孟孙</span>：名何忌，鲁国<a href="#mengshi">孟孙氏</a>第9代宗主，<a href="#mengwubo">孟武伯</a>之父，谥号是懿（&ldquo;温柔圣善曰懿&rdquo;）。《左传&middot;昭公七年》载，他的父亲孟僖子（？&mdash;前518年）不熟悉外交礼仪，随<a href="#zhaogong">昭公</a>出使时不能<a href="#xiang4">相</a>礼，于是深以为耻，回国后努力进修，临终前还命两个儿子孟懿子、南宫敬叔向孔子学礼。</p>
 <p>
 <a id="zongzhu"></a><span class="lyseealso"><span>【参】</span><span><span class="lykeyword">祖</span>包括爷爷及以上的父系先人。同祖为<span class="lykeyword">宗</span>，其字形是设立神主以供祭祀的房子，即<a href="#zongmiao">宗庙</a>。正妻为<span class="lykeyword">嫡</span>，妾为<span class="lykeyword">庶</span>。按周朝宗法制度，嫡长子一支称为<span class="lykeyword">大宗</span>，对父位有天然的继承权，其他的嫡子及庶子则各为<span class="lykeyword">小宗</span>。一宗的首领为<span class="lykeyword">宗主</span>，通常由嫡长子担任。源自一祖而聚居的直系与旁系亲属群，就形成<span class="lykeyword">族</span>。</span></span>
 </p>
@@ -2048,7 +2048,7 @@ img.characterimg {
 <p>
 <span class="lyterm">相（<span class="lypinyin">xi&agrave;ng</span>）维辟（<span class="lypinyin">b&igrave;</span>）公，<a href="#tianzi">天子</a>穆穆</span>：《雍》中的两句，意思是：在旁助祭的是诸侯，天子仪态肃穆从容。</p>
 <p>
-<a id="xiang4"></a><span class="lyterm">相</span>：辅助，扶助。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">危而不持，颠而不扶，则将焉用彼相矣？</span></span></span>
+<a id="xiang4"></a><span class="lyterm">相</span>：辅助，扶助，特指大臣在国君身旁（或家臣在主人身旁）担任傧相，助行礼仪。<span class="lyexample"><span>【例】</span><span><a href="#16.1" class="lyref">16.1</a> <span class="lyq">危而不持，颠而不扶，则将焉用彼相矣？</span></span></span>
 </p>
 <p>
 <span class="lyterm">维</span>：为，是。</p>
@@ -2208,6 +2208,10 @@ img.characterimg {
 </p>
 <p>当时的学礼，既包括仪式内涵的理论，也需要亲身操作演练。射礼和<a href="#xiangyinjiuli">乡饮酒礼</a>可能是较为常用的两种。<span class="lyseealso"><span>【参】</span><span><a href="#17.21" class="lyref">17.21</a> <span class="lyq">君子三年不为礼，礼必坏。</span>《史记&middot;儒林列传》：<span class="lyq">汉兴，然后诸儒始得修其经艺，讲习大射乡饮之礼。</span></span></span>
 </p>
+</li>
+<li>
+<p>
+<span class="lyterm">揖让</span>：宾主相见登阶入门的礼仪，详见《仪礼》士昏礼、士冠礼等篇。<span class="lyterm">揖</span>：拱手向外施礼。揖是站姿，比<a href="#baili">拜礼</a>轻。</p>
 </li>
 <li>
 <p>
@@ -6211,7 +6215,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">知</span>：理解，懂得。这里的着眼点是&ldquo;<a href="#junzi">君子</a>&rdquo;文化修养较高，&ldquo;小民&rdquo;文化水平较低。现代政治难以普遍采用全民表决，文化程度也是重要原因。<span class="lyseealso"><span>【参】</span><span><a href="#6.21" class="lyref">6.21</a> <span class="lyq">中人以下，不可以语上也。</span><a href="#17.4" class="lyref">17.4</a> <span class="lyq">君子学道则爱人，小人学道则易使也。</span>《周易&middot;系辞上传》：<span class="lyq">一阴一阳之谓道，继之者善也，成之者性也。仁者见之谓之仁，知者见之谓之知，百姓日用而不知，故君子之道鲜矣。</span>《孟子&middot;尽心上》：<span class="lyq">孟子曰：&ldquo;行之而不著焉，习矣而不察焉，终身由之而不知其道者，众也。&rdquo;</span>《史记&middot;滑稽列传》载，<a href="#ximenbao">西门豹</a>发动民众修渠灌田，<span class="lyq">民治渠少烦苦，不欲也</span>，他也表达了相似的观点：<span class="lyq">民可以乐成，不可与虑始。今父老子弟虽患苦我，然百岁后期令父老子孙思我言。</span></span></span>
+<span class="lyterm">知</span>：理解，懂得。这里的着眼点是&ldquo;<a href="#junzi">君子</a>&rdquo;文化修养较高，&ldquo;小民&rdquo;文化水平较低。现代政治难以普遍采用全民公决，文化程度也是重要原因。<span class="lyseealso"><span>【参】</span><span><a href="#6.21" class="lyref">6.21</a> <span class="lyq">中人以下，不可以语上也。</span><a href="#17.4" class="lyref">17.4</a> <span class="lyq">君子学道则爱人，小人学道则易使也。</span>《周易&middot;系辞上传》：<span class="lyq">一阴一阳之谓道，继之者善也，成之者性也。仁者见之谓之仁，知者见之谓之知，百姓日用而不知，故君子之道鲜矣。</span>《孟子&middot;尽心上》：<span class="lyq">孟子曰：&ldquo;行之而不著焉，习矣而不察焉，终身由之而不知其道者，众也。&rdquo;</span>《史记&middot;滑稽列传》载，<a href="#ximenbao">西门豹</a>发动民众修渠灌田，<span class="lyq">民治渠少烦苦，不欲也</span>，他也表达了相似的观点：<span class="lyq">民可以乐成，不可与虑始。今父老子弟虽患苦我，然百岁后期令父老子孙思我言。</span></span></span>
 </p>
 <p>较偏激的解释，比之于《老子》第65章的愚民思想：<span class="lyq">古之善为道者，非以明民，将以愚之。民之难治，以其多智。故以智治国，国之贼；不以智治国，国之福。</span>但孔子笃信教化，<a href="#15.39">有教无类</a>，既承认差别，又力行育人，是积极进取的实干家。还可以比较蒋梦麟《西潮》中的反讽：<span class="lyq">但还是让中国人永远无知无识罢&mdash;&mdash;这样，控制和剥削都比较方便。</span>
 </p>
@@ -6619,21 +6623,23 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">拜下</span>：臣见君行拜礼，按规定应在堂下拜了之后，到堂上又拜。<span class="lyterm">拜上</span>是图省事只在堂上拜。</p>
+<span class="lyterm">拜下</span>：臣见君行拜礼，按规定要在堂下拜了之后，到堂上又拜，见《仪礼&middot;觐礼》等篇。<span class="lyterm">拜上</span>是图省事只在堂上拜。<span class="lyterm">拜</span>：这里指<a href="#zaibaiqishou">再拜稽首</a>。</p>
 <p>
-<a id="baili"></a><span class="lyterm">拜</span>：拜礼，《周礼&middot;春官宗伯&middot;大祝》规定有9种，较常见的有：</p>
+<a id="baili"></a>《周礼&middot;春官宗伯&middot;大祝》规定了9种拜礼，都需要先行<a href="#zhengzuo">跪坐</a>，较常见的有：</p>
 <ul>
 <li>
-<p> 稽（<span class="lypinyin">qǐ</span>）首：屈膝跪地，双手交叠伏地，缓缓俯头叩地至手前稍停。这是最重的拜礼，用于下对上，如祭拜祖先神灵、臣拜君、子拜父、徒拜师，以及新婚夫妻对拜。<span class="lykeyword">再拜稽首</span>就是稽首两次。<span class="lyexample"><span>【例】</span><span><a href="#9.3" class="lyref">9.3</a> </span></span>
+<p> 稽（<span class="lypinyin">qǐ</span>）首：跪坐后双手交叠伏地，缓缓叩头，至手前稍停。这是最重的拜礼，用于下对上的礼敬，如祭拜神灵祖先、臣拜君、子拜父、徒拜师，以及新婚夫妻拜天地。后来道士单手立掌躬身行礼也称为稽首，但不是一回事。<span class="lyexample"><span>【例】</span><span>《左传&middot;僖公二十三年》（前637年），公子<a href="#jinwengong">重耳</a>流离至卫国乡间，<span class="lyq">乞食于<a href="#yeren">野人</a>，野人与之〔土〕块。公子怒，欲鞭之。子犯曰：&ldquo;天赐也。&rdquo;稽首，受而载之。</span>这是向天稽首，感谢赐予国土的好兆头。</span></span><span class="lyseealso"><span>【参】</span><span>《白虎通&middot;姓名》：<span class="lyq">人所以相拜者何？所以表情见意，屈节卑体，尊事人者也。拜之言服也。&hellip;&hellip;必稽首何？敬之至也，头至地。</span></span></span>
 </p>
 </li>
 <li>
-<p> 顿首：姿势同上，头较快触地即起。这是次重的拜礼，用于同级平辈间，庄重而不谦卑，也常用于信件首尾。<a id="shenbaoxu"></a><span class="lyexample"><span>【例】</span><span>《左传&middot;定公四年》（前506年），楚国大夫申包胥不饮不食7日哭于秦廷，求兵救楚：<span class="lyq">秦哀公为之赋《无衣》，〔申包胥〕九顿首而坐，秦师乃出。</span>（为国出使，故不稽首。《无衣》见于《诗经&middot;秦风》。）王羲之写给友人的《丧乱帖》，开头和结尾都是<span class="lyq">羲之顿首。</span></span></span>
+<p> 顿首：姿势同稽首，头较快触地即起，有点像现代的磕头。这是次重的拜礼，用于同级平辈间，庄重但不卑下。动作较急促，所以常带有强烈的感情色彩，如恳请、感激、哀痛、惶恐、谢罪等。后来也泛用于信件首尾。<a id="shenbaoxu"></a><span class="lyexample"><span>【例】</span><span>《左传&middot;定公四年》（前506年），楚国大夫申包胥不饮不食7日哭于秦廷，求兵救楚：<span class="lyq">秦哀公为之赋《无衣》，〔申包胥〕九顿首而坐，秦师乃出。</span>（为国出使，故不稽首。《无衣》见于《诗经&middot;秦风》。）王羲之写给友人的《丧乱帖》，开头和结尾都是<span class="lyq">羲之顿首。</span></span></span>
 </p>
 </li>
 <li>
-<p> 空首：屈膝跪地，拱手于胸，俯头至手，又称&ldquo;拜手&rdquo;，用于上对下稽首的答礼，等于未指定上下文的普通的<span class="lykeyword">拜</span>。<a id="zaibai"></a>重复性的<span class="lykeyword">再拜</span>、三拜等，统称&ldquo;褒拜&rdquo;，表示对尊长的恭敬或答谢，后来泛用于同辈间。<span class="lyexample"><span>【例】</span><span><a href="#10.15" class="lyref">10.15</a> <a href="#10.16" class="lyref">10.16</a> <a href="#10.23" class="lyref">10.23</a> </span></span>
+<p> 空首：跪坐后拱手于胸，俯头至手，又称&ldquo;拜手&rdquo;，也就是没有上下文的普通的<span class="lykeyword">拜</span>。它是上对下稽首的答礼，又作为常礼使用，程度上近似于现代的鞠躬。<a id="zaibai"></a>重复性的<span class="lykeyword">再拜</span>等，敬意更深，但止于四拜。&ldquo;百拜&rdquo;是后起的客套话。<span class="lyexample"><span>【例】</span><span><a href="#10.15" class="lyref">10.15</a> <a href="#10.16" class="lyref">10.16</a> <a href="#10.23" class="lyref">10.23</a> 。《左传&middot;哀公十七年》（前478年），<a href="#aigong">鲁哀公</a>与齐平公会盟，<span class="lyq"><a href="#mengwubo">孟武伯</a><a href="#xiang4">相</a>。齐侯稽首，公拜。齐人怒。武伯曰：&ldquo;非天子，寡君无所稽首。&rdquo;</span>武伯之父<a href="#mengyizi">孟懿子</a>曾向孔子学礼，这次占了强邻的上风，让齐人耿耿于怀。</span></span>
 </p>
+<p>
+<a id="zaibaiqishou"></a><span class="lykeyword">再拜稽首</span>是两次空首再加稽首，比稽首更隆重。</p>
 </li>
 </ul>
 <p>
@@ -7801,7 +7807,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="zhengzuo"></a><span class="lyterm">席</span>：中国古代还没有椅凳的时候，标准坐法是在地上铺一张席子，跪坐在上面，称为<span class="lykeyword">正坐</span>，一席可坐数人。<span class="lyterm">不正</span>是指坐席摆放得偏斜或容易滑动。<span class="lyexample"><span>【例】</span><span>成语&ldquo;席地而坐&rdquo;、&ldquo;坐不安席&rdquo;。</span></span>
+<a id="zhengzuo"></a><span class="lyterm">席</span>：中国古代还没有椅凳的时候，正规坐法是在地上铺一张席子，正身跪坐在上面，称为<span class="lykeyword">正坐</span>，一席可坐数人。<span class="lyterm">席不正</span>是指坐席摆放得偏斜或容易滑动。<span class="lyexample"><span>【例】</span><span>成语&ldquo;席地而坐&rdquo;、&ldquo;坐不安席&rdquo;。</span></span>
 </p>
 <p>几（<span class="lypinyin">jī</span>）是供老年人正坐时倚靠的矮桌。盘膝而坐被称为胡坐，比较随意也有失体面，更不用说<a href="#yisi">夷踞</a>了。汉朝起，胡床（类似现代的马扎）等坐具随着佛教传入中国，但仅被视为奇物。唐朝从西亚传入椅子，椅凳才逐渐被接受，至宋朝得到普及。</p>
 </li>
@@ -7869,7 +7875,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">问人于他邦</span>：指（托人）向远在别国的亲友（带去）问候。<span class="lyterm">再拜</span>见 <a href="#9.3" class="lyref">9.3</a> <a href="#zaibai">注</a>。</p>
+<span class="lyterm">问人于他邦</span>：指（托人）向远在别国的亲友（带去）问候。<span class="lyterm"><a href="#zaibai">再拜</a></span>见 <a href="#9.3" class="lyref">9.3</a> <a href="#zaibai">注</a>。</p>
 </li>
 <li>
 <p>
@@ -8176,7 +8182,8 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">先进于礼乐</span>：指先学好了礼乐，再去做官。<a href="#daren">君子</a>大人则可以捷足先登。先进、后进较难确解，这里采用<a href="#lunyuyizhu">杨伯峻</a>先生的观点。</p>
+<span class="lyterm">先进于礼乐</span>：指先学好了礼乐，再去做官。<a href="#daren">君子</a>大人则可以捷足先登。</p>
+<p>先进、后进难以确解，众说纷纭，这里采用<a href="#lunyuyizhu">杨伯峻</a>先生的观点。</p>
 </li>
 <li>
 <p>
@@ -8205,7 +8212,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">及门</span>：字面义是到（我的）门里来，实指仍留在自己身边受教。后来，&ldquo;及门弟子&rdquo;就指到老师家里或讲堂上近距离接受教育的弟子。</p>
+<span class="lyterm">及门</span>：字面义是到（我的）门里来，实指仍留在自己身边受教。后来，&ldquo;及门弟子&rdquo;就指经过老师亲自传授、正式承认的学生。</p>
 </li>
 </ul>
 </div>
@@ -8224,7 +8231,7 @@ img.characterimg {
 <div class="lyblobannotation">
 <p>
 <a id="sikeshizhe"></a>本章列举了孔子弟子中的杰出10人，一般认为是孔子平时言谈所推许的，称为<span class="lykeyword">孔门十哲</span>。又因分为4类特长，也叫<span class="lykeyword">四科十哲</span>。</p>
-<p>唐开元八年（720年），唐玄宗诏令以十哲配享于孔庙。清康熙五十一年（1712年），增补朱熹为十一哲。乾隆三年（1738年），又增<a href="#youruo">有若</a>为十二哲。</p>
+<p>唐开元八年（720年），唐玄宗诏令以十哲配享于孔庙。清康熙五十一年（1712年），增补朱熹为十一哲；乾隆三年（1738年），增补<a href="#youruo">有若</a>为十二哲。</p>
 <p>
 <span class="lyseealso"><span>【参】</span><span><a href="#7.25" class="lyref">7.25</a> 。《孟子&middot;公孙丑上》，孟子的弟子公孙丑说：<span class="lyq">昔者窃闻之：子夏、子游、子张，皆有圣人之一体；冉牛、闵子、颜渊，则具体而微。</span>（一体：指某一方面的长处。）</span></span>
 </p>
@@ -8893,7 +8900,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">相</span>：司仪，傧相。</p>
+<span class="lyterm"><a href="#xiang4">相</a></span>：司仪，傧相。</p>
 </li>
 <li>
 <p>
@@ -8932,7 +8939,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">非邦</span>：（说的）不是国家（治理方面的事）。孔子问的是&ldquo;如或知尔&rdquo;，诸弟子从子路往后，一个比一个回答得谦逊含蓄，所以曾皙想请老师指点确认一下。</p>
+<span class="lyterm">非邦</span>：（说的）不是国家（治理方面的事）。孔子问的是&ldquo;如或知尔&rdquo;，诸弟子从子路往后，一个比一个回答得谦逊含蓄，所以曾皙想请老师点拨开导一下。</p>
 </li>
 </ul>
 </div>
@@ -13248,7 +13255,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<span class="lyterm">孺悲</span>：鲁国人。《礼记&middot;杂记下》载，鲁哀公曾派他向孔子学习士丧礼，该礼因而得以流传，但和这次的&ldquo;欲见&rdquo;不是一回事。</p>
+<span class="lyterm">孺悲</span>：鲁国人。《礼记&middot;杂记下》载，<a href="#aigong">鲁哀公</a>曾派他向孔子学习士丧礼，该礼因而得以流传，但和这次的&ldquo;欲见&rdquo;不是一回事。</p>
 </li>
 <li>
 <p>
