--- a/ly.html
+++ b/ly.html
@@ -4,7 +4,7 @@ permalink: /ly
 ---
 
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-Hans">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
