--- a/aboly.html
+++ b/aboly.html
@@ -15113,11 +15113,15 @@ img.characterimg {
 <p>
 <span class="lybook">《史记》</span>，李全华标点，岳麓书社，古典名著普及文库，1988年。</p>
 <p>
-<span class="lybook">《史记笺证》</span>（修订版），韩兆琦编著，江西人民版，2009年。</p>
+<span class="lybook">《史记》</span>，〔汉〕司马迁撰，〔宋〕裴骃集解，〔唐〕司马贞索隐，〔唐〕张守节正义，中华书局，中华国学文库，2011年。通称&ldquo;三家注&rdquo;本，是宋代以来古注的标准版本。</p>
 <p>
-<span class="lybook">《汉书》</span>，陈焕良、曾宪礼标点，岳麓书社，2008年。</p>
+<span class="lybook">《史记笺证》</span>（修订版），韩兆琦编著，江西人民出版社，2009年。</p>
 <p>
-<span class="lybook">《后汉书》</span>，陈焕良、李传书标点，岳麓书社，1993年。</p>
+<span class="lybook">《汉书》</span>，〔汉〕班固撰，〔唐〕颜师古注，中华书局，2000年。</p>
+<p>
+<span class="lybook">《后汉书》</span>，〔宋〕范晔撰，〔唐〕李贤等注，中华书局，2000年。</p>
+<p>
+<span class="lybook">《三国志》</span>，〔晋〕陈寿撰，〔宋〕裴松之注，中华书局，2005年。</p>
 <p>
 <span class="lybook">《四书五经》</span>，陈戍国点校，岳麓书社，2003年。白文版，11合1（含春秋三传），使用方便。</p>
 <p>
@@ -15136,6 +15140,8 @@ img.characterimg {
 <span class="lybook">《周礼&middot;仪礼&middot;礼记》</span>，陈戍国点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p>
 <span class="lybook">《周礼》</span>，徐正英、常佩雨译注，中华书局，中华经典名著全本全注全译丛书，2014年。</p>
+<p>
+<span class="lybook">《仪礼译注》</span>，杨天宇撰，上海古籍出版社，十三经译注丛书，2004年。</p>
 <p>
 <span class="lybook">《礼记译注》</span>，杨天宇撰，上海古籍出版社，十三经译注丛书，2004年。</p>
 <p>
@@ -15161,9 +15167,9 @@ img.characterimg {
 <p>
 <span class="lybook">《荀子集解》</span>，〔清〕王先谦撰，沈啸寰、王星贤整理，中华书局，中华国学文库，2012年。</p>
 <p>
-<span class="lybook">《韩诗外传笺疏》</span>，屈守元著，巴蜀书社，2012年。</p>
-<p>
 <span class="lybook">《韩诗外传译注》</span>，〔西汉〕韩婴编著，魏达纯译注，东北师范大学出版社，1993年。</p>
+<p>
+<span class="lybook">《韩诗外传笺疏》</span>，屈守元著，巴蜀书社，2012年。</p>
 <p>
 <span class="lybook">《老子&middot;庄子&middot;列子》</span>，张震点校，岳麓书社，古典名著普及文库，2006年。</p>
 <p>
@@ -15189,9 +15195,11 @@ img.characterimg {
 <p>
 <span class="lybook">《古本竹书纪年译注》</span>，李民等译注，中州古籍出版社，1990年。</p>
 <p>
-<span class="lybook">《朱子语类》</span>，〔南宋〕黎靖德编，杨绳其、周娴君校点，岳麓书社，1997年。第19&mdash;50卷为朱熹师徒关于《论语》的问答。</p>
+<span class="lybook">《朱子语类》</span>，〔南宋〕黎靖德编，杨绳其、周娴君校点，岳麓书社，1997年。第19&mdash;50卷是朱熹师徒关于《论语》的问答。</p>
 <p>
 <span class="lybook">《日知录集释》</span>，〔清〕顾炎武著，〔清〕黄汝成集释，栾保群、吕宗力校点，花山文艺出版社，1990年。</p>
+<p>
+<span class="lybook">《四库全书总目提要》</span>，〔清〕纪昀总纂，河北人民出版社，2000年。</p>
 <p>
 <span class="lybook">《中国哲学文献选编》</span>，陈荣捷编著，江苏教育出版社，国学书库&middot;哲学类丛，2006年。</p>
 <p>
