--- a/aboly.html
+++ b/aboly.html
@@ -604,23 +604,23 @@ img.characterimg {
 <a id="dao4"></a><span class="lyterm">道</span>：本义为路，road, approach，引申为规律，道理，能够指导行为的法则。它的内涵比较丰富：</p>
 <ul>
 <li>
-<p> 做好某件事的具体方法、途径。<span class="lyexample"><span>【例】</span><span><a href="#4.5" class="lyref">4.5</a> <span class="lyq">不以其道得之，不处也。</span>《史记&middot;扁鹊仓公列传》：<span class="lyq">虽欲改过自新，其道莫由，终不可得。</span>成语&ldquo;以其人之道，还治其人之身&rdquo;。</span></span>
-</p>
-</li>
-<li>
 <p> 客观存在的一般性规律、原理。<span class="lyexample"><span>【例】</span><span>《老子》第77章：<span class="lyq">天之道，损有余而补不足。人之道则不然，损不足以奉有余。</span>（奉：献给，供养。）</span></span>
 </p>
 </li>
 <li>
-<p> 较为主观专有的，某个学派或学者的体系化思想、学说、技能。<span class="lyexample"><span>【例】</span><span><a href="#4.15" class="lyref">4.15</a> <span class="lyq">吾道一以贯之。</span>《列子&middot;仲尼》：<span class="lyq">老聃之弟子有亢仓之者，得聃之道，能以耳视而目听。</span></span></span>
+<p> 做好某件事的具体方法、途径。<span class="lyexample"><span>【例】</span><span><a href="#4.5" class="lyref">4.5</a> <span class="lyq">不以其道得之，不处也。</span>《史记&middot;扁鹊仓公列传》：<span class="lyq">虽欲改过自新，其道莫由，终不可得。</span>成语&ldquo;以其人之道，还治其人之身&rdquo;。</span></span>
 </p>
 </li>
 <li>
-<p> 正义，道义。<span class="lyexample"><span>【例】</span><span><a href="#11.24" class="lyref">11.24</a> <span class="lyq">以道事君，不可则止。</span></span></span>
+<p> 较为独创或专有的，某个学派、学者的体系化思想、学说、技能。<span class="lyexample"><span>【例】</span><span><a href="#4.15" class="lyref">4.15</a> <span class="lyq">吾道一以贯之。</span>《列子&middot;仲尼》：<span class="lyq">老聃之弟子有亢仓之者，得聃之道，能以耳视而目听。</span></span></span>
 </p>
 </li>
 <li>
-<p> 又特指治国安邦的正途、大道。<span class="lyexample"><span>【例】</span><span><a href="#14.3" class="lyref">14.3</a> <span class="lyq">邦有道，危言危行。</span>评书演义里也常出现&ldquo;无道昏君&rdquo;。</span></span>
+<p> 泛指正义，道义。<span class="lyexample"><span>【例】</span><span><a href="#11.24" class="lyref">11.24</a> <span class="lyq">以道事君，不可则止。</span></span></span>
+</p>
+</li>
+<li>
+<p> 专指治国安邦的正途，大道。<span class="lyexample"><span>【例】</span><span><a href="#14.3" class="lyref">14.3</a> <span class="lyq">邦有道，危言危行。</span>评书演义里也常出现&ldquo;无道昏君&rdquo;。</span></span>
 </p>
 </li>
 </ul>
@@ -2003,7 +2003,7 @@ img.characterimg {
 <p>
 <a id="qingdafushi"></a>周朝<a href="#zhuhou">诸侯国</a>在国君以下的贵族（与<a href="#shu4b">庶民</a>相对），有<span class="lykeyword">卿</span>、<span class="lykeyword">大（<span class="lypinyin">d&agrave;</span>）夫</span>、<span class="lykeyword">士</span>3等，每等又分上、中（或称亚、次）、下3级。诸侯有三卿，上卿执政，又称<span class="lykeyword">正卿</span>。周王有六卿，卿之上还有<span class="lykeyword">公</span>（三公：师、保、傅），执政大臣称为<span class="lykeyword">卿士</span>。士与平民的距离最近，下士的俸禄刚够糊口，不必亲身耕作了。大夫比卿的群体大，比士的权力高，是官吏阶层的中坚。</p>
 <p>
-<a id="shidafu"></a>后世表示身份的称谓中，<span class="lykeyword">卿大夫</span>、<span class="lykeyword">公卿大夫</span>属于高级官员；<span class="lykeyword">士大夫</span>泛指官吏阶层，特别是有公职名望的知识分子；<span class="lykeyword">士人</span>是尚无官位但有一定才誉的读书人（即<a href="#shi4c">士</a>），士大夫的后备军。</p>
+<a id="shidafu"></a>后世表示身份的称谓中，<span class="lykeyword">卿大夫</span>、<span class="lykeyword">公卿大夫</span>属于高级官员；<span class="lykeyword">士大夫</span>泛指官吏阶层，特别是有公职名望的知识分子；<span class="lykeyword">士人</span>是尚无官位但有一定才誉的读书人（即<a href="#shi4c">士</a>），可看作士大夫的预备队。</p>
 </div>
 </li>
 <li>
@@ -2406,7 +2406,8 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">奥</span>：指奥神，具体来历已失传，受祭于室内西南角，于是西南角也称为奥，是室内的尊位。这里喻指名位尊贵但不起实际作用的人，难以确考是谁，有认为指<a href="#6.28">子见南子</a>一事。</p>
+<span class="lyterm">奥</span>：指奥神，这是其本义，确切来历已失传，只知道受祭于室内西南角，于是西南角也称为奥，是室内的尊位。这里喻指名位尊贵但不起实际作用的人，难以确考是谁，有认为指<a href="#6.28">子见南子</a>一事。</p>
+<p>后来，&ldquo;奥&rdquo;泛指室内深处，逐渐&ldquo;深奥&rdquo;并用。&ldquo;奥援&rdquo;就是内部或暗中的助力，内应；&ldquo;<a href="#shengtangrushi">堂</a>奥&rdquo;指高深的道理或境界。</p>
 </li>
 <li>
 <p>
@@ -3003,6 +3004,11 @@ img.characterimg {
 <p>
 <span class="lyterm">朝</span>（<span class="lypinyin">zhāo</span>）：早晨。<span class="lyterm">夕</span>：傍晚，日暮。</p>
 </li>
+<li>
+<p>
+<span class="lyterm">闻道</span>。<span class="lyterm">闻</span>不仅仅是&ldquo;听见&rdquo;，还要&ldquo;听进去&rdquo;，也就是理解和认同，明白。<span class="lyterm"><a href="#dao4">道</a></span>的所指比较宽泛，古注多从修身和治国两方面阐述，笼统说就是真理，大道。从个人的角度，闻道相当于领悟人生价值。即使来不及圆满实现（夕死），也不是空虚蒙昧的了。现代语境中，这句话还常用于苦苦求解的难题，愿意为之付出很大代价。<span class="lyseealso"><span>【参】</span><span>清代戴望《颜氏学记&middot;卷五》引清儒李塨（<span class="lypinyin">gōng</span>）语：<span class="lyq">&ldquo;闻&rdquo;非偶然顿悟，乃躬行心得之谓。<a href="#9.11">颜子之叹</a>、<a href="#4.15">曾子之&ldquo;唯&rdquo;</a>，庶可当之。方不徒生，亦不虚死，故曰&ldquo;可矣&rdquo;。</span></span></span>
+</p>
+</li>
 </ul>
 </div>
 </div>
@@ -3018,7 +3024,9 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="shi4c"></a><span class="lyterm">士</span>：对成年男子的美称，这是它的基本义。<span class="lyexample"><span>【例】</span><span>《韩诗外传》第8卷第24章：<span class="lyq">士必学问，然后成<a href="#junzi">君子</a>。</span></span></span>有具体所指时，意义较广，《论语》中涉及的有：</p>
+<a id="shi4c"></a><span class="lyterm">士</span>：对成年男子的美称，这是它的基本义。<span class="lyexample"><span>【例】</span><span>《韩诗外传》第8卷第24章：<span class="lyq">士必学问，然后成<a href="#junzi">君子</a>。</span></span></span>
+</p>
+<p>有具体所指时，意义较广，《论语》中涉及的有：</p>
 <ul>
 <li>
 <p> 读书人，知识分子。官职并非士的必要条件，但按儒家传统观念，是应当积极从政的。<a href="#19.13" class="lyref">19.13</a> <span class="lyq">学而优则仕</span>，主语很自然地就是士。向学之士与在位之<a href="#qingdafushi">士</a>的区别，类似于双重含义的<a href="#junzi">君子</a>。古代不同职业的地位及影响力差别很大，现代的选择面就宽得多了。</p>
@@ -3028,7 +3036,7 @@ img.characterimg {
 </p>
 </li>
 </ul>
-<p>此外，士还是最低级别的<a href="#qingdafushi">贵族阶层</a>，也泛指有官职者。到战国时，养士之风盛行，实用的一技之长更受看重。</p>
+<p>此外，士还是最低级别的<a href="#qingdafushi">贵族阶层</a>，也泛指有官职者。到了战国，养士之风盛行，实用的一技之长更受看重。</p>
 </li>
 <li>
 <p>
@@ -3133,7 +3141,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="heyou"></a><span class="lyterm">何有</span>：字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢，有什么关系呢，有什么值得看重的呢，有什么好在乎的呢，这里是第一个意思。<span class="lyexample"><span>【例】</span><span><a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《史记&middot;齐太公世家》颜师古注：<span class="lyq">人之情非不爱其身也，其身之忍，又将何有于君？</span>《左传&middot;僖公二十四年》：<span class="lyq">除君之恶，唯力是视，蒲人狄人，余何有焉？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span>
+<a id="heyou"></a><span class="lyterm">何有</span>：字面上是说有什么呢，多用于反问，可表达的意思包括：有什么难的呢，有什么关系呢，有什么值得看重的呢，有什么好在乎的呢。这里是第一个意思。<span class="lyexample"><span>【例】</span><span><a href="#6.8" class="lyref">6.8</a> <span class="lyq">于从政乎何有？</span>《史记&middot;齐太公世家》颜师古注：<span class="lyq">人之情非不爱其身也，其身之忍，又将何有于君？</span>《左传&middot;僖公二十四年》：<span class="lyq">除君之恶，唯力是视，蒲人狄人，余何有焉？</span>李贽《与周友山》：<span class="lyq">士为知己者死，死且甘焉，又何有于废弃<a href="#yu2">欤</a>？</span></span></span>
 </p>
 </li>
 </ul>
@@ -4874,7 +4882,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">欺</span>：欺骗。<a id="wang3a"></a><span class="lyterm"><a href="#wang3">罔</a></span>：使动用法，使迷惑，蒙蔽。<span class="lyseealso"><span>【参】</span><span>《孟子&middot;万章上》讲了一个<a href="#zichan">子产</a>受骗的故事：子产的属下把别人送给子产的鲜鱼煮熟吃掉，却报告说已经放生到池塘里，看见它很欢畅地游走了，子产听到后为鱼<span class="lyq">得其所哉</span>而欣喜。孟子的结论是：<span class="lyq">君子可欺以其方，难罔以非其道。</span>（方：方正，正派，也有解释为（合乎情理的）<a href="#fang1">方式</a>。）</span></span>
+<span class="lyterm">欺</span>：欺骗。<a id="wang3a"></a><span class="lyterm"><a href="#wang3">罔</a></span>：使动用法，使迷惑，蒙蔽。<span class="lyseealso"><span>【参】</span><span>《孟子&middot;万章上》讲了一个<a href="#zichan">子产</a>受骗的故事：子产的属下把别人送给子产的鲜鱼煮熟吃掉，却报告说已经放生到池塘里，看见它很欢畅地游走了，子产听后为鱼<span class="lyq">得其所哉</span>而欣喜。孟子的结论是：<span class="lyq">君子可欺以其方，难罔以非其道。</span>（方：方正，正派，也有解释为（合乎情理的）<a href="#fang1">方式</a>。）</span></span>
 </p>
 </li>
 </ul>
@@ -5353,7 +5361,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<a id="nuo4"></a><span class="lyterm">诺</span>：表示应允、遵命的答应声，相当于好的，好吧，OK，fine。<span class="lyexample"><span>【例】</span><span>《战国策&middot;齐策四&middot;齐人有冯谖（<span class="lypinyin">xuān</span>）者》：<span class="lyq">孟尝君不说，曰：&ldquo;诺！先生休矣。&rdquo;</span>（休矣：停止吧，算了吧，意指闭上嘴下去吧。）</span></span>
+<a id="nuo4"></a><span class="lyterm">诺</span>：表示应允、遵命的答应声，相当于好的，好吧，OK，fine。<span class="lyexample"><span>【例】</span><span>《战国策&middot;齐策四&middot;齐人有冯谖（<span class="lypinyin">xuān</span>）者》：<span class="lyq">孟尝君不说，曰：&ldquo;诺！先生休矣。&rdquo;</span>（休矣：停止吧，算了吧，意指闭上嘴退下吧。）</span></span>
 </p>
 </li>
 <li>
@@ -5386,7 +5394,7 @@ img.characterimg {
 <p>
 <span class="lyterm">浮云</span>随风飘荡，含有转瞬即逝、不可靠、不值得、不屑为等意味，可以自行体会。</p>
 <p>
-<a id="dongmenhuangquan"></a><span class="lyseealso"><span>【参】</span><span>孔子眼中的浮云，世人却趋之若鹜。如《史记&middot;李斯列传》载，李斯从荀子学帝王之术，学成辞行时说：<span class="lyq">诟莫大于卑贱，而悲莫甚于穷困。久处卑贱之位、困苦之地，非世而恶利，自托于无为，此非<a href="#shi4c">士</a>之情也。故斯将西说秦王矣。</span>（诟（<span class="lypinyin">g&ograve;u</span>）：耻。）经过二十余年苦心经营，终于辅佐秦始皇一统天下。位极人臣之际，他也曾<a href="#kui4">喟然</a>而叹：<span class="lyq">物极则衰，吾未知所税驾也！</span>（税：通&ldquo;脱&rdquo;。税驾：（自比老马）解下车套，即休息。）政治斗争多么残酷，他出于嫉妒害死了同学韩非，又因为恐惧<a href="#ershiwangqin">害死</a>了皇长子扶苏、大将蒙恬，结果自己也被近臣赵高陷以谋反之名，腰斩灭族。临死之前，他<span class="lyq">顾谓其中子曰：&ldquo;吾欲与若复牵黄犬俱出上蔡东门逐狡兔，岂可得乎！&rdquo;遂父子相哭。</span>（上蔡：李斯的故乡，战国时为楚国一县，在今河南省上蔡县。）在他贵显之时，老师荀子早已<span class="lyq">退而笑之曰：&ldquo;夫不以其道进者，必不以其道亡。&rdquo;</span>（《荀子》刘向叙录。）</span></span>
+<a id="dongmenhuangquan"></a><span class="lyseealso"><span>【参】</span><span>孔子眼中的浮云，世人却趋之若鹜。如《史记&middot;李斯列传》载，李斯从荀子学帝王之术，学成辞行时说：<span class="lyq">诟莫大于卑贱，而悲莫甚于穷困。久处卑贱之位、困苦之地，非世而恶利，自托于无为，此非<a href="#shi4c">士</a>之情也。故斯将西说秦王矣。</span>（情：本性。诟（<span class="lypinyin">g&ograve;u</span>）：耻。）经过二十余年苦心经营，终于辅佐秦始皇一统天下。位极人臣之际，他也曾<a href="#kui4">喟然</a>而叹：<span class="lyq">物极则衰，吾未知所税驾也！</span>（税：通&ldquo;脱&rdquo;。税驾：（自比老马）解下车套，即休息，退休。）政治斗争多么残酷，他出于嫉妒害死了同学韩非，又因为恐惧<a href="#ershiwangqin">害死</a>了皇长子扶苏、大将蒙恬，结果自己也被近臣赵高陷以谋反之名，腰斩灭族。临死之前，<span class="lyq">顾谓其中子曰：&ldquo;吾欲与若复牵黄犬俱出上蔡东门逐狡兔，岂可得乎！&rdquo;遂父子相哭。</span>（<a id="ruo4"></a>若：你。上蔡：李斯的故乡，战国时为楚国一县，在今河南省上蔡县。）在他贵显之时，老师荀子早已<span class="lyq">退而笑之曰：&ldquo;夫不以其道进者，必不以其道亡。&rdquo;</span>（《荀子》刘向叙录。）</span></span>
 </p>
 </li>
 </ul>
@@ -6625,7 +6633,7 @@ img.characterimg {
 <p>
 <span class="lyterm">拜下</span>：臣见君行拜礼，按规定要在堂下拜了之后，到堂上又拜，见《仪礼&middot;觐礼》等篇。<span class="lyterm">拜上</span>是图省事只在堂上拜。<span class="lyterm">拜</span>：这里指<a href="#zaibaiqishou">再拜稽首</a>。</p>
 <p>
-<a id="baili"></a>《周礼&middot;春官宗伯&middot;大祝》规定了9种拜礼，都需要先行<a href="#zhengzuo">跪坐</a>，较常见的有：</p>
+<a id="baili"></a>《周礼&middot;春官宗伯&middot;大祝》规定了9种拜礼，都要先<a href="#zhengzuo">跪坐</a>，较常见的有：</p>
 <ul>
 <li>
 <p> 稽（<span class="lypinyin">qǐ</span>）首：跪坐后双手交叠伏地，缓缓叩头，至手前稍停。这是最重的拜礼，用于下对上的礼敬，如祭拜神灵祖先、臣拜君、子拜父、徒拜师，以及新婚夫妻拜天地。后来道士单手立掌躬身行礼也称为稽首，但不是一回事。<span class="lyexample"><span>【例】</span><span>《左传&middot;僖公二十三年》（前637年），公子<a href="#jinwengong">重耳</a>流离至卫国乡间，<span class="lyq">乞食于<a href="#yeren">野人</a>，野人与之〔土〕块。公子怒，欲鞭之。子犯曰：&ldquo;天赐也。&rdquo;稽首，受而载之。</span>这是向天稽首，感谢赐予国土的好兆头。</span></span><span class="lyseealso"><span>【参】</span><span>《白虎通&middot;姓名》：<span class="lyq">人所以相拜者何？所以表情见意，屈节卑体，尊事人者也。拜之言服也。&hellip;&hellip;必稽首何？敬之至也，头至地。</span></span></span>
@@ -6636,7 +6644,7 @@ img.characterimg {
 </p>
 </li>
 <li>
-<p> 空首：跪坐后拱手于胸，俯头至手，又称&ldquo;拜手&rdquo;，也就是没有上下文的普通的<span class="lykeyword">拜</span>。它是上对下稽首的答礼，又作为常礼使用，程度上近似于现代的鞠躬。<a id="zaibai"></a>重复性的<span class="lykeyword">再拜</span>等，敬意更深，但止于四拜。&ldquo;百拜&rdquo;是后起的客套话。<span class="lyexample"><span>【例】</span><span><a href="#10.15" class="lyref">10.15</a> <a href="#10.16" class="lyref">10.16</a> <a href="#10.23" class="lyref">10.23</a> 。《左传&middot;哀公十七年》（前478年），<a href="#aigong">鲁哀公</a>与齐平公会盟，<span class="lyq"><a href="#mengwubo">孟武伯</a><a href="#xiang4">相</a>。齐侯稽首，公拜。齐人怒。武伯曰：&ldquo;非天子，寡君无所稽首。&rdquo;</span>武伯之父<a href="#mengyizi">孟懿子</a>曾向孔子学礼，这次占了强邻的上风，让齐人耿耿于怀。</span></span>
+<p> 空首：跪坐后拱手于胸，俯头至手，又称&ldquo;拜手&rdquo;，也就是没有上下文的普通的<span class="lykeyword">拜</span>。它是上对下稽首的答礼，又作为常礼使用，程度上近似于现代的鞠躬。<a id="zaibai"></a>重复性的<span class="lykeyword">再拜</span>等，敬意更深，但止于四拜。&ldquo;百拜&rdquo;是后起的客套话。<span class="lyexample"><span>【例】</span><span><a href="#10.15" class="lyref">10.15</a> <a href="#10.16" class="lyref">10.16</a> <a href="#10.23" class="lyref">10.23</a> 。《左传&middot;哀公十七年》（前478年），<a href="#aigong">鲁哀公</a>与齐平公会盟，<span class="lyq"><a href="#mengwubo">孟武伯</a><a href="#xiang4">相</a>。齐侯稽首，公拜。齐人怒。武伯曰：&ldquo;非天子，寡君无所稽首。&rdquo;</span>武伯之父<a href="#mengyizi">孟懿子</a>曾向孔子学礼，这次就有了实效，占了强邻的上风，让齐人耿耿于怀。</span></span>
 </p>
 <p>
 <a id="zaibaiqishou"></a><span class="lykeyword">再拜稽首</span>是两次空首再加稽首，比稽首更隆重。</p>
@@ -8343,7 +8351,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">从大夫之后</span>：跟在大夫们身后，这是谦虚地表示自己<a href="#duosandu">曾任大夫</a>。按周礼，大夫及以上出门应乘车，孔子虽不在职也有此待遇。现代汉语有&ldquo;忝列衣冠&rdquo;、&ldquo;忝任&rdquo;的类似说法（忝（<span class="lypinyin">tiǎn</span>）：使同列受辱，自己有愧于，用作谦词）。<span class="lyseealso"><span>【参】</span><span><a href="#10.20" class="lyref">10.20</a> </span></span>
+<span class="lyterm">从大夫之后</span>：跟在大夫们身后，这是谦虚地表示自己<a href="#duosandu">曾任大夫</a>。按周礼，大夫及以上出门应乘车，孔子虽不在职也有此待遇。现代汉语有&ldquo;忝列衣冠&rdquo;、&ldquo;忝任&rdquo;的类似说法。忝（<span class="lypinyin">tiǎn</span>）：使同列受辱，自己有愧于，用作谦词。<span class="lyseealso"><span>【参】</span><span><a href="#10.20" class="lyref">10.20</a> </span></span>
 </p>
 </li>
 </ul>
@@ -8497,7 +8505,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm">升<a href="#tang2">堂</a></span>比喻已经入了门、踏上正道，<a id="ruyushi"></a><span class="lyterm">入于<a href="#shi4e">室</a></span>则指造诣达到精深。成语&ldquo;升堂入室&rdquo;、&ldquo;登堂入室&rdquo;均指学问技艺已经达到很高水平，后者也可以指粗鲁无礼地闯入（break in）的行为。</p>
+<a id="shengtangrushi"></a><span class="lyterm">升<a href="#tang2">堂</a></span>比喻已经入了门、踏上正道，<a id="ruyushi"></a><span class="lyterm">入于<a href="#shi4e">室</a></span>则指造诣达到精深。成语&ldquo;升堂入室&rdquo;、&ldquo;登堂入室&rdquo;均指学问技艺已经达到很高水平，后者也可以指粗鲁无礼地闯入（break in）的行为。</p>
 </li>
 </ul>
 </div>
@@ -12093,7 +12101,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li>
 <p>
-<a id="li4"></a><span class="lyterm">莅</span>（<span class="lypinyin">l&igrave;</span>）：<a href="#lin2">临</a>视，引申为治理，掌管。<span class="lyexample"><span>【例】</span><span>柳宗元《捕蛇者说》：<span class="lyq">余将告于莅事者，更若役，复若赋，则何如？</span></span></span>
+<a id="li4"></a><span class="lyterm">莅</span>（<span class="lypinyin">l&igrave;</span>）：<a href="#lin2">临</a>视，引申为治理，掌管。<span class="lyexample"><span>【例】</span><span>柳宗元《捕蛇者说》：<span class="lyq">余将告于莅事者，更<a href="#ruo4">若</a>役，复若赋，则何如？</span></span></span>
 </p>
 </li>
 <li>
@@ -12455,7 +12463,7 @@ img.characterimg {
 </li>
 <li>
 <p>
-<span class="lyterm"><a href="#pianpian">便</a>辟</span>（<span class="lypinyin">pi&aacute;n b&igrave;</span>）：花言巧语地迎合谄媚。<span class="lyterm">辟</span>：委曲求宠，后专写为&ldquo;<a href="#bi4a">嬖</a>&rdquo;。<span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">便辟，巧辟人之所忌，以求容媚。</span>（后一个辟通&ldquo;避&rdquo;。）清代黄式三《论语后案》：<span class="lyq">便辟者，习惯其般旋退避之容，一于卑逊，是<a href="#zugong">足恭</a>也。</span>（般旋：盘旋，行止往来。一：竟，甚至。）</span></span>
+<span class="lyterm"><a href="#pianpian">便</a>辟</span>（<span class="lypinyin">pi&aacute;n b&igrave;</span>）：花言巧语地迎合谄媚。<span class="lyterm">辟</span>：委曲求宠，后专写为&ldquo;<a href="#bi4a">嬖</a>&rdquo;。<span class="lyseealso"><span>【参】</span><span>《论语注疏》：<span class="lyq">便辟，巧辟人之所忌，以求容媚。</span>（后一个辟通&ldquo;避&rdquo;。）黄式三《论语后案》：<span class="lyq">便辟者，习惯其般旋退避之容，一于卑逊，是<a href="#zugong">足恭</a>也。</span>（般旋：盘旋，行止往来。一：竟，甚至。）</span></span>
 </p>
 </li>
 <li>
@@ -15083,10 +15091,6 @@ img.characterimg {
 <p>
 <span class="lybook">《唐写本论语郑氏注及其研究》</span>，王素编著，文物出版社，1991年。</p>
 <p>
-<span class="lybook">《孔子集语校补》</span>，〔清〕孙星衍等辑，郭沂校补，齐鲁书社，1998年。</p>
-<p>
-<span class="lybook">《孔丛子》</span>，王钧林、周海生译注，中华书局，中华经典藏书丛书，2012年。</p>
-<p>
 <span class="lybooke">Analects: With Selections from Traditional Commentaries</span>, Edward Slingerland（森舸澜）, Hackett Publishing Co., Hackett Classics, 2010.</p>
 <p>
 <span class="lybooke">CONFUCIUS: Discussions/Conversations, or the Analects (Lun-yu)</span>, David R. Schiller, Amazon Digital Services, Inc., 2014.</p>
@@ -15103,11 +15107,15 @@ img.characterimg {
 <p>
 <span class="lybook">《孔子传》</span>，李长之著，东方出版社，2010年。</p>
 <p>
-<span class="lybook">《论语二十讲》</span>，周予同、朱维铮等著，傅杰选编，华夏出版社，2009年。</p>
+<span class="lybook">《论语二十讲》</span>，周予同、朱维铮等著，傅杰选编，华夏出版社，伟大传统丛书，2009年。</p>
 <p>
 <span class="lybook">《孔子与中国之道》</span>（<span class="lybooke">Confucius and the Chinese Way</span>），顾立雅（Herrlee Glessner Creel）著，高专诚译，大象出版社，当代海外汉学名著译丛，2000年。Original English edition published by Harper Torchbooks, 1960.</p>
 <p>
 <span class="lybook">《孔子：喧嚣时代的孤独哲人》</span>（<span class="lybooke">The Authentic Confucius: A Life of Thought and Politics</span>），金安平著，黄煜文译，广西师范大学出版社，2011年。Original English edition published by Scribner, 2007.</p>
+<p>
+<span class="lybook">《孔子集语校补》</span>，〔清〕孙星衍等辑，郭沂校补，齐鲁书社，1998年。</p>
+<p>
+<span class="lybook">《孔丛子》</span>，王钧林、周海生译注，中华书局，中华经典藏书丛书，2012年。</p>
 <a id="references-misc"></a>
 <h2>其它</h2>
 <p>
@@ -15160,6 +15168,8 @@ img.characterimg {
 <span class="lybook">《战国策注释》</span>，何建章注释，中华书局，1990年。</p>
 <p>
 <span class="lybook">《孔子家语》</span>，〔魏〕王肃编著，王国轩、王秀梅译注，中华书局，中华经典名著全本全注全译丛书，2011年。</p>
+<p>
+<span class="lybook">《孟子注疏》</span>，〔汉〕赵岐注，〔宋〕孙奭疏，龚抗云整理，山东画报出版社，四库家藏丛书，2004年。</p>
 <p>
 <span class="lybook">《孟子译注》</span>，杨伯峻编著，中华书局，1960年。</p>
 <p>
